--- a/황현식/css/11-2 position (rel,sticky)/05 display레벨/css/style.css
+++ b/황현식/css/11-2 position (rel,sticky)/05 display레벨/css/style.css
@@ -33,7 +33,7 @@ h1 {
     line-height: 100px;
 }
 
-.box1 span:nth-child(3) {
+s .box1 span:nth-child(3) {
     height: 50px;
     line-height: 50px;
 }
@@ -114,11 +114,11 @@ h1 {
 }
 
 
-.box5{
+.box5 {
     text-align: center;
 }
 
-.box5 div{
+.box5 div {
     display: inline-block;
     width: 200px;
     height: 200px;
