--- a/황현식/html/06 form/css/style.css
+++ b/황현식/html/06 form/css/style.css
@@ -1,12 +1,15 @@
-.hobbys label:first-child {
-  color: red;
+.hobbys label:first-child{
+  color:red;
+}
+
+.hobbys input{
+  display: none;
 }
 
 .hobbys input:checked + label{
+  background: yellow;
   text-decoration: underline;
-  background-color: yellow;
 }
-
-.greet*{
+.greet  *{
   vertical-align: top;
 }
