--- a/황현식/주말공부/02.24 누르면 박스추가/css/style.css
+++ b/황현식/주말공부/02.24 누르면 박스추가/css/style.css
@@ -34,6 +34,7 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
+    /* 100px주면 박스가 짤림 */
     height: 100px;
     background: whitesmoke;
     display: flex;
