--- a/portpolio_copy/css/style.css
+++ b/portpolio_copy/css/style.css
@@ -1,36 +1,16 @@
-/*
-  selector
-  - class(.)
-  - id(#)
-  - element
-  - parent > child
-
-  * 명명규칙 - class : header__naming
-  * 변수/상수 - --color-black : #ffffff
-*/
-
-/*
-  Global
-*/
 :root {
-  /* App Color */
   --color-primary: var(--color-black);
-  --color-accent: var(--color-blue);
-  --color-text: var(--color-white);
+  --color-primary: var(--color-blue);
+  --color-primary: var(--color-orange);
 
-  /* Color list */
-  --color-white: #ffffff;
-  --color-black: #050a13;
-  --color-blue: #03e8f9;
-  --color-orange: #fd6413;
-  --color-gray: #1b1e26;
+  --color-white: #fff;
+  --color-black: #000000;
+  --color-blue: #1100ff;
+  --color-orange: #ff8800;
+  --color-gray: #858585;
 }
 
-/*
-  Commons
-*/
 body {
-  /* Font-Type */
   margin: 0;
 }
 h1,
@@ -39,106 +19,4 @@ h3,
 p,
 ul {
   margin: 0;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-a {
-  text-decoration: none;
-}
-button {
-  background-color: transparent;
-  border: 0;
-  outline: 0;
-}
-button:focus {
-  outline: 1px solid var(--color-accent);
-}
-
-/*
-  Header
-*/
-.header {
-  background-color: var(--color-primary);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.header__logo {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  /* background-color: var(--color-accent); */
-}
-.header__logo__img {
-  width: 36px;
-  height: 36px;
-}
-.header__logo__title {
-  font-size: 1.8rem;
-  color: var(--color-text);
-}
-.header__menu {
-  display: flex;
-  gap: 4px;
-}
-.header__menu__item {
-  color: var(--color-text);
-  padding: 8px 16px;
-}
-.header__menu__item:hover {
-  border-bottom: 1px solid var(--color-accent);
-}
-.header__menu__item.active {
-  border: 1px solid var(--color-accent);
-  border-radius: 4px;
-}
-
-/*
-  Home
-*/
-#home {
-  background-color: var(--color-primary);
-  color: var(--color-text);
-  padding: 5rem 1rem;
-  padding-top: 7rem;
-  text-align: center;
-}
-.home__avatar {
-  width: 250px;
-  height: 250px;
-  border: 5px solid var(--color-accent);
-  border-radius: 100%;
-  object-fit: cover; /*원래 이미지 비율 유지*/
-}
-.home__title {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-}
-.home__title--strong {
-  color: var(--color-accent);
-}
-.home__description {
-  font-size: 1.3rem;
-  border: 1px solid green;
-  margin: 0;
-}
-.home__contact {
-  display: inline-block;
-  background-color: var(--color-accent);
-  color: var(--color-primary);
-  padding: 0.5rem 1rem;
-  margin: 2rem;
-  font-weight: bold;
-  border-radius: 4px;
-}
-.home__contact:hover {
-  background-color: transparent;
-  outline: 2px solid var(--color-accent);
-  color: var(--color-text);
 }
