--- a/portpolio_copy/css/style.css
+++ b/portpolio_copy/css/style.css
@@ -1,16 +1,44 @@
-:root {
-  --color-primary: var(--color-black);
-  --color-primary: var(--color-blue);
-  --color-primary: var(--color-orange);
+/*
+  selector
+  - class(.)
+  - id(#)
+  - element
+  - parent > child
 
-  --color-white: #fff;
-  --color-black: #000000;
-  --color-blue: #1100ff;
-  --color-orange: #ff8800;
-  --color-gray: #858585;
+  * 명명규칙 - class : header__naming
+  * 변수/상수 - --color-black : #ffffff
+*/
+
+/*
+  Global
+*/
+:root {
+  /* App Color */
+  --color-primary: var(--color-black);
+  --color-accent: var(--color-blue);
+  --color-text: var(--color-white);
+
+  /* Color list */
+  --color-white: #ffffff;
+  --color-black: #050a13;
+  --color-blue: #03e8f9;
+  --color-orange: #fd6413;
+  --color-gray: #1b1e26;
+
+  /* size */
+  --max-size-width: 1200px;
+}
+
+/*
+  Commons
+*/
+* {
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
+  /* Font-Type */
   margin: 0;
 }
 h1,
@@ -19,4 +47,384 @@ h3,
 p,
 ul {
   margin: 0;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+}
+button {
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+}
+button:focus {
+  outline: 1px solid var(--color-accent);
+}
+.max-container {
+  max-width: var(--max-size-width);
+  margin: auto;
+  /* border: 1px solid red; */
+}
+.section {
+  padding: 4rem;
+  text-align: center;
+}
+.title {
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+.description {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
+
+/*
+  Header
+*/
+.header {
+  background-color: var(--color-primary);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  /* background-color: var(--color-accent); */
+}
+.header__logo__img {
+  width: 36px;
+  height: 36px;
+}
+.header__logo__title {
+  font-size: 1.8rem;
+  color: var(--color-text);
+}
+.header__menu {
+  display: flex;
+  gap: 4px;
+}
+.header__menu__item {
+  color: var(--color-text);
+  padding: 8px 16px;
+}
+.header__menu__item:hover {
+  border-bottom: 1px solid var(--color-accent);
+}
+.header__menu__item.active {
+  border: 1px solid var(--color-accent);
+  border-radius: 4px;
+}
+
+/*
+  Home
+*/
+#home {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  padding: 5rem 1rem;
+  padding-top: 7rem;
+  text-align: center;
+}
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border: 5px solid var(--color-accent);
+  border-radius: 100%;
+  object-fit: cover; /*원래 이미지 비율 유지*/
+}
+.home__title {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+.home__title--strong {
+  color: var(--color-accent);
+}
+.home__description {
+  font-size: 1.3rem;
+  margin: 0;
+}
+.home__contact {
+  display: inline-block; /* 마진안먹음 */
+  background-color: var(--color-accent);
+  color: var(--color-primary);
+  padding: 0.5rem 1rem;
+  margin: 2rem;
+  font-weight: bold;
+  border-radius: 4px;
+}
+.home__contact:hover {
+  background-color: transparent;
+  outline: 2px solid var(--color-accent); /* border 대신에씀 없어졌다 나왔다 사라짐 */
+  color: var(--color-text);
+}
+
+/*
+  About
+*/
+.majors {
+  /* border: 1px solid green; */
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  margin: 2.5rem 0;
+}
+.major {
+  /* border: 1px solid red; */
+  background-color: var(--color-gray);
+  color: var(--color-text);
+  padding: 2rem 1rem;
+  border-radius: 1rem;
+  cursor: default;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+}
+.major__icon {
+  font-size: 4rem;
+  color: var(--color-accent);
+  margin: 1rem 0;
+  transition: all 300ms ease;
+}
+.major:hover .major__icon {
+}
+.major__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.jobs {
+  /* border: 1px solid tomato; */
+  text-align: start;
+}
+.job {
+  /* border: 1px solid green; */
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 1rem;
+}
+.job__name {
+}
+.job__period {
+}
+
+/*
+  Skills
+*/
+#skill {
+  background-color: var(--color-gray);
+  color: var(--color-text);
+}
+.skills {
+  /* border:1px solid red; */
+  display: grid;
+  grid-template-columns: 6fr 4fr;
+  margin: 2rem 0;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+}
+.skill__title {
+  color: var(--color-accent);
+  font-size: 1.2rem;
+  margin: 1rem 0;
+}
+.sklls__coding {
+  /* border: 1px solid green; */
+  grid-row: span 2;
+  background-color: var(--color-primary);
+  padding: 1rem;
+}
+.skills__tools {
+  padding: 1rem;
+}
+.skills__etc {
+  padding: 1rem;
+  background-color: var(--color-primary);
+  filter: brightness(150%);
+}
+.bar {
+  /* border: 1px solid blue; */
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
+}
+.bar__metadata {
+  display: flex;
+  justify-content: space-between;
+}
+.bar__bg {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-gray);
+}
+.bar__value {
+  height: 3px;
+  background-color: var(--color-accent);
+}
+
+/*
+  Work
+*/
+#work {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+}
+.categories {
+  /* border: 1px solid yellow; */
+  display: flex;
+  justify-content: center;
+  margin: 2.5rem 0;
+  gap: 1rem;
+}
+.category {
+  position: relative;
+  color: var(--color-text);
+  font-size: 1.1rem;
+  padding: 0.5rem 3rem;
+  border: 1px solid var(--color-accent);
+  border-radius: 4px;
+  cursor: pointer;
+}
+.category--selected {
+  background-color: var(--color-accent);
+  color: var(--color-primary);
+}
+.category__count {
+  position: absolute;
+  top: -20px;
+  right: 16px;
+  opacity: 0;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  border-radius: 100%;
+  background-color: var(--color-orange);
+  color: var(--color-text);
+  transition: all 250ms ease-in;
+}
+.category--selected .category__count,
+.category:hover .category__count {
+  opacity: 1;
+  top: 0;
+}
+.projects {
+  border: 1px solid red;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 1rem;
+}
+.project {
+  position: relative;
+  /* border-radius: 8px; */
+  overflow: hidden;
+}
+.project__img {
+  width: 100%;
+  border-radius: 8px;
+}
+.project__metadata {
+  /* border: 1px solid blue; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-primary);
+  opacity: 0; /* 투명도 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.project__metadata__title:after {
+  content: "";
+  display: block;
+  background-color: var(--color-accent);
+  width: 50px;
+  height: 3px;
+  left: 50%;
+  margin: 0.5rem 0;
+  transform: translateX(-60%);
+}
+.project__metadata:hover {
+  opacity: 0.8;
+}
+
+/* testimonials */
+.testmonials {
+  margin: 3rem;
+}
+.testimonial {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+.testimonial:nth-child(even) .testimonial__img {
+  order: 1;
+}
+.testimonial__img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 100%;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+}
+.testimonial__bubble {
+  border-radius: 8px;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+  padding: 1rem;
+}
+.testimonial__bubble__name {
+  color: var(--color-accent);
+  font-weight: bold;
+  filter: brightness(70%);
+  display: inline-block;
+}
+/* arrow-up */
+.arrow--up {
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  color: var(--color-text);
+  font-size: 3rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  text-align: center;
+  box-shadow: 5px 5px 0px 0px var(--color-accent);
+  border-radius: 100%;
+  transition: opacity 300ms ease-in;
+  background-color: var(--color-primary);
+}
+
+/*
+footer
+*/
+#contact {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+}
+.contact__links {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+.contact__link {
+  color: var(--color-text);
+}
+.contact__link:hover {
+  color: var(--color-accent);
 }
