--- a/portpolio/portfolio_0321_/css/style.css
+++ b/portpolio/portfolio_0321_/css/style.css
@@ -64,7 +64,6 @@ button:focus {
   outline: 1px solid var(--color-accent);
 }
 .max-container {
-  /* 각 섹션마다 적용함 header footer빼고 */
   max-width: var(--max-size-width);
   margin: auto;
   /* border: 1px solid red; */
@@ -124,6 +123,14 @@ button:focus {
   border: 1px solid var(--color-accent);
   border-radius: 4px;
 }
+.header__toggle {
+  display: none;
+  color: var(--color-text);
+  font-size: 1.5rem;
+  position: absolute;
+  top: 0.8rem;
+  right: 1rem;
+}
 
 /*
   Home
@@ -154,7 +161,7 @@ button:focus {
   margin: 0;
 }
 .home__contact {
-  display: inline-block; /* 마진안먹음 */
+  display: inline-block;
   background-color: var(--color-accent);
   color: var(--color-primary);
   padding: 0.5rem 1rem;
@@ -164,7 +171,7 @@ button:focus {
 }
 .home__contact:hover {
   background-color: transparent;
-  outline: 2px solid var(--color-accent); /* border 대신에씀 없어졌다 나왔다 사라짐 */
+  outline: 2px solid var(--color-accent);
   color: var(--color-text);
 }
 
@@ -174,7 +181,7 @@ button:focus {
 .majors {
   /* border: 1px solid green; */
   display: flex;
-  justify-content: space-between; /* Front-end, Mobile, Back-end 정렬 */
+  justify-content: space-between;
   gap: 1rem;
   margin: 2.5rem 0;
 }
@@ -322,7 +329,7 @@ button:focus {
   top: 0;
 }
 .projects {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
@@ -338,35 +345,39 @@ button:focus {
   border-radius: 8px;
 }
 .project__metadata {
-  /* border: 1px solid blue; */
+  /* border:1px solid blue; */
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: var(--color-primary);
-  opacity: 0; /* 투명도 */
+  opacity: 0;
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .project__metadata__title:after {
+  /* div */
+  width: 50px;
+  height: 2px;
   content: "";
   display: block;
   background-color: var(--color-accent);
-  width: 50px;
-  height: 3px;
+  position: relative;
   left: 50%;
-  margin: 0.5rem 0;
-  transform: translateX(-60%);
+  margin: 0.8rem 0;
+  transform: translateX(-50%);
 }
 .project__metadata:hover {
   opacity: 0.8;
 }
 
-/* testimonials */
-.testmonials {
+/*
+  Testimonials
+*/
+.testimonials {
   margin: 3rem;
 }
 .testimonial {
@@ -386,17 +397,20 @@ button:focus {
   box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
 }
 .testimonial__bubble {
+  padding: 1rem;
   border-radius: 8px;
   box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
-  padding: 1rem;
 }
 .testimonial__bubble__name {
-  color: var(--color-accent);
-  font-weight: bold;
-  filter: brightness(70%);
   display: inline-block;
+  margin-top: 0.3rem;
+  color: var(--color-accent);
+  filter: brightness(70%);
 }
-/* arrow-up */
+
+/*
+  Arrow-up
+*/
 .arrow--up {
   position: fixed;
   bottom: 3rem;
@@ -413,7 +427,7 @@ button:focus {
 }
 
 /*
-footer
+  Footer
 */
 #contact {
   background-color: var(--color-primary);
@@ -426,10 +440,76 @@ footer
   padding: 1rem;
   font-size: 2rem;
 }
-
 .contact__link {
   color: var(--color-text);
 }
 .contact__link:hover {
   color: var(--color-accent);
 }
+
+/*******************************
+  media screen - 768 ❌ 1024
+*******************************/
+@media screen and (max-width: 768px) {
+  .section {
+    padding: 3rem 2rem;
+  }
+  .title {
+    font-size: 2rem;
+  }
+  .description {
+    font-size: 1rem;
+  }
+  .header {
+    flex-direction: column;
+    align-items: start;
+  }
+  .header__toggle {
+    display: block;
+  }
+  .header__menu {
+    display: none;
+  }
+  #home {
+    padding-bottom: 3rem;
+  }
+  .home__title {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .majors {
+    flex-direction: column;
+    align-items: center;
+  }
+  .major {
+    width: 30rem;
+  }
+  .job {
+    justify-content: center;
+  }
+  .skills {
+    grid-template-columns: 1fr;
+  }
+  .categories {
+    flex-direction: column;
+  }
+  .category {
+    width: 100%;
+  }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .testimonial {
+    flex-direction: column;
+  }
+  .testimonial:nth-child(even) .testimonial__img {
+    order: 0;
+  }
+  .arrow--up {
+    bottom: 1.5rem;
+    right: 2rem;
+    font-size: 2rem;
+    width: 3rem;
+    height: 3rem;
+  }
+} /* media screen */
